--- a/my-react-app/my-tano/src/App.css
+++ b/my-react-app/my-tano/src/App.css
@@ -1,17 +1,38 @@
 .App {
   height: 100vh;
   width: 100vw;
+
   background-color: gainsboro;
   border: 4px solid black;
   padding: 2px;
 
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
   >* {
     border: 1px dotted black;
     margin: 4px;
     align-items: center;
     justify-content: center;
     text-align: center;
+    scroll-snap-align: start;
   }
+}
+
+#cover{
+  background-image: url("/public/cameron.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 95vh;
+}
+
+#idNav{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+
 }
 
 .Nav {
@@ -24,6 +45,17 @@
 
 .Nav.hovered{
   /* opacity: 1; */
+}
+
+.Context{
+  width: 100vw;
+  height: 100vh;
+
+  >* {
+    border: 1px dotted black;
+    margin: 4px;
+    height: 50vh;
+  }
 }
 
 
